Made Components and basic DIV's

--- a/ClientApp/src/custom.scss
+++ b/ClientApp/src/custom.scss
@@ -12,3 +12,23 @@ code {
   background-color: #1b6ec2;
   border-color: #1861ac;
 }
+
+.header {
+  background-color: red;
+}
+
+.hero {
+  background-color: blue;
+}
+
+.studies {
+  background-color: yellow;
+}
+
+.partners {
+  background-color: aqua;
+}
+
+.footer {
+  background-color: darkgray;
+}
