--- a/ClientApp/src/components/header.scss
+++ b/ClientApp/src/components/header.scss
@@ -5,7 +5,7 @@
 }
 
 .header img {
-  height: 15vh;
+  height: 10vh;
 }
 
 .header ul {
@@ -13,19 +13,23 @@
 }
 
 .header-right {
+  width: 100%;
   display: flex;
   flex-direction: column;
 }
 
-.header-top-menu {
+.header-top-items {
   display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  background-color: yellow;
+  flex: wrap;
+  flex-direction: row;
+  justify-content: space-between;
+  // background-color: yellow;
 }
-.header-bottom-menu {
+
+.header-bottom-items {
   display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  background-color: pink;
+  flex: wrap;
+  flex-direction: row;
+  justify-content: space-between;
+  // background-color: pink;
 }
