--- a/ClientApp/src/components/hero.scss
+++ b/ClientApp/src/components/hero.scss
@@ -1,3 +1,25 @@
 .hero {
-  background-color: blue;
+  // background-color: blue;
+  margin: 1rem;
+  display: flex;
+  flex-direction: row;
+}
+
+.agent-pic {
+  height: auto;
+  width: 25vh;
+}
+
+.agent-info {
+  text-align: center;
+}
+
+.hero-right {
+  display: flex;
+  flex-direction: column;
+  margin-left: 2rem;
+}
+
+h2 {
+  text-align: center;
 }
