--- a/ClientApp/src/components/partners.scss
+++ b/ClientApp/src/components/partners.scss
@@ -1,6 +1,7 @@
 .partners {
   // background-color: aqua;
   margin: 1rem;
+  padding-bottom: 1rem;
 }
 
 .partners button {
@@ -30,4 +31,13 @@
 
 .h4 {
   text-align: center;
+}
+
+.div-line {
+  margin: 1rem 1rem 1rem 1rem;
+  height: 0px;
+  // width: 90%;
+  background-color: #8d0000;
+  padding: 1px 1rem 1px 1rem;
+  margin-left: 2rem;
 }
