--- a/ClientApp/src/components/studies.scss
+++ b/ClientApp/src/components/studies.scss
@@ -14,4 +14,14 @@
 
 h1 {
   text-align: center;
+  color: #8d0000;
+}
+
+.div-line {
+  margin: 1rem 1rem 1rem 1rem;
+  height: 0px;
+  // width: 90%;
+  background-color: #8d0000;
+  padding: 1px 1rem 1px 1rem;
+  margin-left: 2rem;
 }
