more changes to footer and plans

--- a/ClientApp/src/components/customerPlans.scss
+++ b/ClientApp/src/components/customerPlans.scss
@@ -5,32 +5,42 @@
     background-color: grey;
     margin: 0;
   }
+  h2 {
+    background-color: grey;
+    margin: 0;
+  }
   .plan-content {
     display: flex;
     aside {
       margin-left: 1rem;
-      width: 10vw;
+      // width: 25vw;
+      // min-width: 35vw;
       background-color: grey;
 
       margin: 0;
       ul {
-        padding: 0;
+        padding: 1rem;
         margin: 0;
         display: flex;
         flex-direction: column;
       }
       button {
-        padding: 0;
         margin: 0;
         font-size: 0.5rem;
-        margin: 0.5rem;
+        min-width: 20vw;
         background-color: yellow;
       }
     }
     main {
+      display: flex;
       margin: 0rem;
       width: 100vw;
       background-color: grey;
+      p {
+        margin-left: 1rem;
+        width: 60%;
+        text-align: justify;
+      }
     }
   }
 }
