--- a/ClientApp/src/components/summarymenu.scss
+++ b/ClientApp/src/components/summarymenu.scss
@@ -21,3 +21,15 @@
   padding: 110px;
   border-radius: 50%;
 }
+
+.summary-button {
+  background-color: #8d0000;
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  font-size: 16px;
+  margin: 4px 2px;
+  opacity: 1;
+  transition: 0.3s;
+}
