--- a/ClientApp/src/components/testimonies.scss
+++ b/ClientApp/src/components/testimonies.scss
@@ -15,6 +15,8 @@
 h1 {
   text-align: center;
   color: black;
+  padding: 1.5rem;
+  align-items: center;
 }
 
 .div-line {
@@ -27,13 +29,23 @@ h1 {
 }
 
 .testimony {
-  width: 50%;
+  width: 80%;
+  padding: 1rem;
+  // background-color: red;
+  // padding: 1rem;
 }
 
 .testimony-item {
-  background-color: #e5e5e5;
+  // background-color: blue;
 }
 
 .testimony-text p {
   color: black;
+}
+
+.testimonies {
+  // background-color: green;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
