--- a/ClientApp/src/components/customerPlans.scss
+++ b/ClientApp/src/components/customerPlans.scss
@@ -2,11 +2,11 @@
   margin: 2rem;
 
   h1 {
-    background-color: grey;
+    background-color: #0a2463;
     margin: 0;
   }
   h2 {
-    background-color: grey;
+    background-color: #0a2463;
     margin: 0;
   }
   .plan-content {
@@ -15,27 +15,33 @@
       margin-left: 1rem;
       // width: 25vw;
       // min-width: 35vw;
-      background-color: grey;
+      background-color: #0a2463;
 
       margin: 0;
       ul {
-        padding: 1rem;
-        margin: 0;
+        padding: 0rem;
+        margin: 1rem 1rem;
         display: flex;
         flex-direction: column;
       }
       button {
-        margin: 0;
-        font-size: 0.5rem;
-        min-width: 20vw;
-        background-color: yellow;
+        background-color: #8d0000;
+        border: none;
+        color: white;
+        padding: 0.5rem;
+        text-align: center;
+        font-size: 16px;
+        margin: 0.2rem;
+
+        opacity: 1;
+        transition: 0.3s;
       }
     }
     main {
       display: flex;
       margin: 0rem;
       width: 100vw;
-      background-color: grey;
+      background-color: #0a2463;
       p {
         margin-left: 1rem;
         width: 60%;
