--- a/ClientApp/src/components/hero.scss
+++ b/ClientApp/src/components/hero.scss
@@ -6,8 +6,8 @@
 }
 
 .family-pic {
-  height: auto;
-  width: 75vh;
+  height: 100%;
+  width: 40vw;
   border-style: solid;
   border-width: 1px;
 }
@@ -28,6 +28,7 @@
 h2 {
   text-align: center;
   color: #ffffff;
+  padding: 1rem;
 }
 
 p {
@@ -56,4 +57,21 @@ p {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  button {
+    background-color: #8d0000;
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    font-size: 16px;
+    margin: 4px 2px;
+    opacity: 1;
+    transition: 0.3s;
+  }
+}
+
+.hero-list {
+  color: white;
+  padding-left: 2rem;
+  margin: 2rem;
 }
