--- a/ClientApp/src/components/agentmenu.scss
+++ b/ClientApp/src/components/agentmenu.scss
@@ -1,11 +1,11 @@
-.summary {
+.agent-summary {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   margin: 1rem;
 }
 
-.panel-section {
+.agent-panel-section {
   // background-color: yellow;
   display: flex;
   flex-direction: column;
@@ -18,7 +18,7 @@
   }
 }
 
-.summary-image {
+.agent-summary-image {
   background-color: lightgray;
   border: none;
   border-radius: 0%;
@@ -26,7 +26,7 @@
   align-self: center;
 }
 
-.summary-button {
+.agent-summary-button {
   background-color: #8d0000;
   border: none;
   color: white;
